# mag-calib

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs
.cargo/: config.toml
raw_data/: imu_gnss_data.csv  plot_gyro_mags.py
src/: lib.rs  oboslete_online_calibrator2.rs  online_calibrator.rs
src/ffi/: interface.rs  interface_android_logger.rs  mod.rs
tests/: irons_on_irons.rs  offline.rs  online.rs  plots.rs
