[package]
name = "rs_mag_calib"
version = "0.1.0"
edition = "2021"

[lib]
name = "mag_calib"
crate-type = ["cdylib","rlib"]

[dependencies]
nalgebra = "0.33.2"
log = "0.4.27"
android_logger = {version = "0.15.0", optional = true}
simple_logger = "5.0.0"

[build-dependencies]
flapigen = {version = "0.9.0", optional = true}
bindgen = { version = "0.71.1", default-features = false, features = ["logging", "runtime", "which-rustfmt"], optional = true}

[dev-dependencies]
plotly = { version = "0.12.1"}
csv = { version = "1.1" }

[features]
cpp_wrapper = ["flapigen","bindgen"]
java_wrapper = ["flapigen","bindgen","android_logger"]
all_wrappers = ["cpp_wrapper","java_wrapper"]